--- a/web.config
+++ b/web.config
@@ -8,6 +8,7 @@
 
 <configuration>
   <system.webServer>
+    <iisnode nodeProcessCommandLine="C:\Program Files\nodejs\node.exe" />
     <!-- Visit http://blogs.msdn.com/b/windowsazure/archive/2013/11/14/introduction-to-websockets-on-windows-azure-web-sites.aspx for more information on WebSocket support -->
     <webSocket enabled="false" />
     <handlers>
